--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </a>
       </div>
       <div class="col-xs-10">
-        <a id="title" href="https://arxiv.org/abs/2205.14313"> <h2> <strong>Learning to Use CHopsticks in Diverse Gripping Styles</strong></h2></a>
+        <a id="title" href="https://arxiv.org/abs/2205.14313"> <h2> <strong>Learning to Use Chopsticks in Diverse Gripping Styles</strong></h2></a>
         <div id="authors"> <strong>Zeshi Yang</strong>, KangKang Yin, Libin Liu </div>
         <!-- <div id="journal">  to appear on Eurographics 2021 </div> -->
         <div id="journal">  ACM Transactions on Graphics, Volume 41, Issue 4, Article 95 (Proc. ACM SIGGRAPH 2022) </div>
