--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <div class="row pub-item"> 
       <div class="col-xs-2">
         <a href="https://arxiv.org/abs/2205.14313">
-          <img class="img-thumbnail" src="project/chopsticks/teaser.jpg">
+          <img class="img-thumbnail" src="project/chopsticks/teaser.PNG">
         </a>
       </div>
       <div class="col-xs-10">
@@ -116,12 +116,12 @@
         </div>
       </div>
     </div>
-
+    <br>
 
     <div class="row pub-item"> 
       <div class="col-xs-2">
         <a href="project/bo/bo.html">
-          <img class="img-thumbnail" src="project/bo/bo.png">
+          <img class="img-thumbnail" src="project/bo/teaser_new.PNG">
         </a>
       </div>
       <div class="col-xs-10">
@@ -142,7 +142,7 @@
     <div class="row pub-item"> 
       <div class="col-xs-2">
         <a href="project/jump/jump.html">
-          <img class="img-thumbnail" src="project/jump/jump.jpg">
+          <img class="img-thumbnail" src="project/jump/teaser_new.PNG">
         </a>
       </div>
       <div class="col-xs-10">
@@ -209,7 +209,7 @@
     <div class="row pub-item"> 
       <div class="col-xs-2">
         <a href="https://arxiv.org/pdf/2008.00324.pdf">
-          <img class="img-thumbnail" src="project/robust/robust.PNG">
+          <img class="img-thumbnail" src="project/robust/teaser.PNG">
         </a>
       </div>
       <div class="col-xs-10">
@@ -250,7 +250,7 @@
     <div class="row pub-item"> 
       <div class="col-xs-2">
         <a href="http://staff.ustc.edu.cn/~fuxm/projects/REM/index.html">
-          <img class="img-thumbnail" src="project/rem/rem.PNG" >
+          <img class="img-thumbnail" src="project/rem/teaser.PNG" >
         </a>
       </div>
       <div class="col-xs-10">
