--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div id="journal">  ACM Transactions on Graphics, Volume 41, Issue 4, Article 95 (Proc. ACM SIGGRAPH 2022) </div>
         <div>
             <a class="btn btn-default btn-sm btn-margin" href="https://arxiv.org/abs/2205.14313" download> Paper</a>
-            <a class="btn btn-default btn-sm btn-margin" href="https://arxiv.org/abs/2205.14313"  download> Video(Coming Soon)</a>
+            <a class="btn btn-default btn-sm btn-margin" href="https://www.youtube.com/watch?v=xLzA84ZYt0k"> Video</a>
         </div>
       </div>
     </div>
