--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <a id="title" href="project/bo/bo.html"> <h2> <strong>Efficient Hyperparameter Optimization for Physics-based Character Animation</strong></h2></a>
         <div id="authors"> <strong>Zeshi Yang</strong>, Zhiqi Yin </div>
         <!-- <div id="journal">  to appear on Eurographics 2021 </div> -->
-        <div id="journal">  ACM SIGGRAPH Symposium on Interactive 3D Graphics and Games 2021 </div>
+        <div id="journal">  ACM SIGGRAPH Symposium on Interactive 3D Graphics and Games 2021 (I3D 2021)</div>
         <div>
             <a class="btn btn-default btn-sm btn-margin" href="project/bo/bo.html"> Project </a>
             <a class="btn btn-default btn-sm btn-margin" href="https://arxiv.org/pdf/2104.12365.pdf" download> Paper</a>
@@ -149,7 +149,7 @@
         <a id="title" href="project/jump/jump.html"> <h2> <strong>Discovering Diverse Athletic Jumping Strategies</strong></h2></a>
         <div id="authors"> Zhiqi Yin, <strong>Zeshi Yang</strong>, Michiel van de Panne, KangKang Yin </div>
         <!-- <div id="journal">  to appear on Eurographics 2021 </div> -->
-        <div id="journal">  ACM Transactions on Graphics, Volume 40, Issue 4, Article 19 (Proc. ACM SIGGRAPH 2021) </div>
+        <div id="journal">  ACM Transactions on Graphics, Volume 40, Issue 4, Article 91 (Proc. ACM SIGGRAPH 2021) </div>
         <div>
             <a class="btn btn-default btn-sm btn-margin" href="project/jump/jump.html"> Project </a>
             <a class="btn btn-default btn-sm btn-margin" href="https://www.cs.sfu.ca/~kkyin/papers/Jump.pdf" download> Paper</a>
@@ -172,7 +172,7 @@
       <div class="col-xs-10">
         <a id="title" href="https://arxiv.org/pdf/2012.04195.pdf"> <h2> <strong>Neural fidelity warping for efficient robot morphology design</strong></h2></a>
         <div id="authors"> Sha Hu, <strong>Zeshi Yang</strong>, Greg Mori</div>
-        <div id="journal"> 2021 International Conference on Robotics and Automation (ICRA)</div>
+        <div id="journal"> 2021 International Conference on Robotics and Automation (ICRA 2021)</div>
         <div>
             <a class="btn btn-default btn-sm btn-margin" href="https://arxiv.org/pdf/2012.04195.pdf" download> Paper</a>
         </div>
