--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
         <div>
             <a class="btn btn-default btn-sm btn-margin" href="https://arxiv.org/abs/2205.14313" download> Paper</a>
             <a class="btn btn-default btn-sm btn-margin" href="https://www.youtube.com/watch?v=xLzA84ZYt0k"> Video</a>
+            <a class="btn btn-default btn-sm btn-margin" href="https://github.com/chopsticks-research2022/learning2usechopsticks"> Code </a>
         </div>
       </div>
     </div>
