--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <div class="edu-item">
           <i class="fa fa-graduation-cap" aria-hidden="true"></i>
-          Ph.D in Computer Science, Simon Fraser University, 2018 - Now
+          Ph.D in Computer Science, Simon Fraser University, 2018 - 2023
         </div>
 
         <div class="edu-item">
@@ -82,9 +82,13 @@
       <div class="col-xs-6">
         <div class="edu-item">
             <i class="fa fa-graduation-cap" aria-hidden="true"></i>
-            Visiting Scholar, Peking Univerisity, China, 2021 Aug - Now
+            Visiting Scholar, Peking Univerisity, China, 2021 Aug - 2022 Aug
           </div>
-
+        
+        <div class="edu-item">
+            <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+            Research Intern, LightSpeed Studios, Tencent America, 2022 Sep - 2023 May
+          </div>
       </div>
     </div>
 
