--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </div>
         
         <div class="edu-item">
-            <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+            <i class="fa fa-windows" aria-hidden="true"></i>
             Research Intern, LightSpeed Studios, Tencent America, 2022 Sep - 2023 May
           </div>
       </div>
