--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       <h1> Zeshi Yang (楊 澤士) </h1>
       <div id="biography_text">
-        I am currently a PhD student in Simon Fraser Univeristy, majoring in physics-based character animation, moition control and deep reinforcement learning. Prior that, I got my bachelor's degree in applied physics from USTC in 2018.</a>
+        I am currently a research scientist in MiHoYo. I got my PhD degree from Simon Fraser Univeristy in 2023, majoring in physics-based character animation, moition control and deep reinforcement learning. Prior that, I got my bachelor's degree in applied physics from USTC in 2018.</a>
       </div>
       <div class="row con-icon">
         <a class="col-xs-2" href="#contact"> <i class="fa fa-envelope"></i></a>
@@ -89,6 +89,11 @@
             <i class="fa fa-windows" aria-hidden="true"></i>
             Research Intern, LightSpeed Studios, Tencent America, 2022 Sep - 2023 May
           </div>
+
+        <div class="edu-item">
+            <i class="fa fa-windows" aria-hidden="true"></i>
+            Research scientist, MiHoYo, 2023 June - Now
+          </div>
       </div>
     </div>
 
@@ -105,19 +110,16 @@
 
     <div class="row pub-item"> 
       <div class="col-xs-2">
-        <a href="https://arxiv.org/abs/2205.14313">
+        <a href="javascript:void(0)">
           <img class="img-thumbnail" src="project/chopsticks/teaser.PNG">
         </a>
       </div>
       <div class="col-xs-10">
-        <a id="title" href="https://arxiv.org/abs/2205.14313"> <h2> <strong>Learning to Use Chopsticks in Diverse Gripping Styles</strong></h2></a>
-        <div id="authors"> <strong>Zeshi Yang</strong>, KangKang Yin, Libin Liu </div>
-        <!-- <div id="journal">  to appear on Eurographics 2021 </div> -->
-        <div id="journal">  ACM Transactions on Graphics, Volume 41, Issue 4, Article 95 (Proc. ACM SIGGRAPH 2022) </div>
+        <a id="title" href="javascript:void(0)"> <h2> <strong>Learning-based 2D Irregular Shape Packing</strong></h2></a>
+        <div id="authors"> <strong>Zeshi Yang</strong>, Zherong Pan, Manyi Li, Kui Wu, Xifeng Gao </div>
+        <div id="journal">  ACM Transactions on Graphics, Volume 42, Article 6 (Proc. ACM SIGGRAPH Aisa 2023) </div>
         <div>
-            <a class="btn btn-default btn-sm btn-margin" href="https://arxiv.org/abs/2205.14313" download> Paper</a>
-            <a class="btn btn-default btn-sm btn-margin" href="https://www.youtube.com/watch?v=xLzA84ZYt0k"> Video</a>
-            <a class="btn btn-default btn-sm btn-margin" href="https://github.com/chopsticks-research2022/learning2usechopsticks"> Code </a>
+            <a class="btn btn-default btn-sm btn-margin" href="javascript:void(0)" download> Paper</a>
         </div>
       </div>
     </div>
