--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <div class="row pub-item"> 
       <div class="col-xs-2">
         <a href="project/bo/bo.html">
-          <img class="img-thumbnail" src="project/bo/teaser_new.PNG">
+          <img class="img-thumbnail" src="project/papers_378s3.jpg">
         </a>
       </div>
       <div class="col-xs-10">
