--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class="row pub-item"> 
       <div class="col-xs-2">
         <a href="javascript:void(0)">
-          <img class="img-thumbnail" src="project/chopsticks/teaser.PNG">
+          <img class="img-thumbnail" src="project/papers_378s3.jpg">
         </a>
       </div>
       <div class="col-xs-10">
@@ -125,10 +125,32 @@
     </div>
     <br>
 
+
+    <div class="row pub-item"> 
+      <div class="col-xs-2">
+        <a href="https://arxiv.org/abs/2205.14313">
+          <img class="img-thumbnail" src="project/chopsticks/teaser.PNG">
+        </a>
+      </div>
+      <div class="col-xs-10">
+        <a id="title" href="https://arxiv.org/abs/2205.14313"> <h2> <strong>Learning to Use Chopsticks in Diverse Gripping Styles</strong></h2></a>
+        <div id="authors"> <strong>Zeshi Yang</strong>, KangKang Yin, Libin Liu </div>
+        <!-- <div id="journal">  to appear on Eurographics 2021 </div> -->
+        <div id="journal">  ACM Transactions on Graphics, Volume 41, Issue 4, Article 95 (Proc. ACM SIGGRAPH 2022) </div>
+        <div>
+            <a class="btn btn-default btn-sm btn-margin" href="https://arxiv.org/abs/2205.14313" download> Paper</a>
+            <a class="btn btn-default btn-sm btn-margin" href="https://www.youtube.com/watch?v=xLzA84ZYt0k"> Video</a>
+            <a class="btn btn-default btn-sm btn-margin" href="https://github.com/chopsticks-research2022/learning2usechopsticks"> Code </a>
+        </div>
+      </div>
+    </div>
+    <br>
+    
+
     <div class="row pub-item"> 
       <div class="col-xs-2">
         <a href="project/bo/bo.html">
-          <img class="img-thumbnail" src="project/papers_378s3.jpg">
+          <img class="img-thumbnail" src="project/bo/teaser_new.PNG">
         </a>
       </div>
       <div class="col-xs-10">
