--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class="row pub-item"> 
       <div class="col-xs-2">
         <a href="javascript:void(0)">
-          <img class="img-thumbnail" src="project/papers_378s3.jpg">
+          <img class="img-thumbnail" src="project/pack.png">
         </a>
       </div>
       <div class="col-xs-10">
