--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 
       <h1> Zeshi Yang (楊 澤士) </h1>
       <div id="biography_text">
-        I am currently a research scientist in MiHoYo. I got my PhD degree from Simon Fraser Univeristy in 2023, majoring in physics-based character animation, moition control and deep reinforcement learning. Prior that, I got my bachelor's degree in applied physics from USTC in 2018.</a>
+        I currently work as a research scientist in MiHoYo, focusing on developing cutting edge AIGC techniques for various motion generation tasks. I am particularly enthusiastic about combining control methods with deep learning to realize <strong>high-quality, controllable and explainable </strong> motion synthesis systems.
+        I got my PhD degree from Simon Fraser Univeristy in 2023, majoring in physics-based character animation, moition control and deep reinforcement learning. Before that, I got my bachelor's degree in applied physics from USTC in 2018.</a>
       </div>
       <div class="row con-icon">
         <a class="col-xs-2" href="#contact"> <i class="fa fa-envelope"></i></a>
@@ -110,7 +111,7 @@
 
     <div class="row pub-item"> 
       <div class="col-xs-2">
-        <a href="javascript:void(0)">
+        <a href="https://arxiv.org/abs/2309.10329">
           <img class="img-thumbnail" src="project/pack.png">
         </a>
       </div>
