--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
         </a>
       </div>
       <div class="col-xs-10">
-        <a id="title" href="javascript:void(0)"> <h2> <strong>Learning-based 2D Irregular Shape Packing</strong></h2></a>
+        <a id="title" href="https://arxiv.org/abs/2309.10329"> <h2> <strong>Learning-based 2D Irregular Shape Packing</strong></h2></a>
         <div id="authors"> <strong>Zeshi Yang</strong>, Zherong Pan, Manyi Li, Kui Wu, Xifeng Gao </div>
         <div id="journal">  ACM Transactions on Graphics, Volume 42, Article 6 (Proc. ACM SIGGRAPH Aisa 2023) </div>
         <div>
-            <a class="btn btn-default btn-sm btn-margin" href="javascript:void(0)" download> Paper</a>
+            <a class="btn btn-default btn-sm btn-margin" href="https://arxiv.org/abs/2309.10329" download> Paper</a>
         </div>
       </div>
     </div>
