--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       <h1> Zeshi Yang (楊 澤士) </h1>
       <div id="biography_text">
-        I currently work as a research scientist in MiHoYo, focusing on developing cutting edge AIGC techniques for various motion generation tasks. I am particularly enthusiastic about combining control methods with deep learning to realize <strong>high-quality, controllable and explainable </strong> motion synthesis systems.
+        I currently work as a research scientist in MiHoYo, focusing on developing cutting edge AIGC techniques for various motion generation tasks. I am particularly enthusiastic about combining control methods with deep learning to realize <font color = #FF5733>high-quality, controllable and explainable </font> motion synthesis systems.
         I got my PhD degree from Simon Fraser Univeristy in 2023, majoring in physics-based character animation, moition control and deep reinforcement learning. Before that, I got my bachelor's degree in applied physics from USTC in 2018.</a>
       </div>
       <div class="row con-icon">
@@ -69,12 +69,12 @@
 
         <div class="edu-item">
           <i class="fa fa-graduation-cap" aria-hidden="true"></i>
-          Ph.D in Computer Science, Simon Fraser University, 2018 - 2023
+          B.S. in Applied Physics, University of Science and Technology of China, 2014 - 2018
         </div>
 
         <div class="edu-item">
           <i class="fa fa-graduation-cap" aria-hidden="true"></i>
-          B.S. in Applied Physics, University of Science and Technology of China, 2014 - 2018
+          Ph.D in Computer Science, Simon Fraser University, 2018 - 2023
         </div>
 
       </div>
