--- a/index.html
+++ b/index.html
@@ -350,12 +350,8 @@
     <h2 class="page-header"> Contact </h2>
 
     <div class="con-item">
-      <i class="fa fa-envelope"></i> Email: zeshiy [at] sfu.ca 
+      <i class="fa fa-envelope"></i> Email: zs243[at]mail.ustc.edu.cn 
     </div>
-    <div class="con-item">
-      <i class="fa fa-map"></i> Address: TASC1 8004, Simon Fraser Univeristy, 8888 Univeristy Drive, Burnaby, BC, CANADA, 
-    </div>
-    
   </div>
 </div>
 </div>
