--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div id="biography" class="row display-flex">
     <!-- profile image -->
     <div class="col-xs-5" align="center">
-          <img class="img-rounded" width="90%" src="id.jpg" data-holder-rendered="true">
+          <img class="img-rounded" width="90%" src="id.png" data-holder-rendered="true">
     </div>
 
     <!-- profile text -->
