--- a/index.html
+++ b/index.html
@@ -126,6 +126,23 @@
     </div>
     <br>
 
+    <div class="row pub-item"> 
+      <div class="col-xs-2">
+        <a href="https://summit.sfu.ca/_flysystem/fedora/2023-04/etd22376.pdf">
+          <img class="img-thumbnail" src="project/pack.png">
+        </a>
+      </div>
+      <div class="col-xs-10">
+        <a id="title" href="https://summit.sfu.ca/_flysystem/fedora/2023-04/etd22376.pdf"> <h2> <strong>Acquiring Stylized Motor Skills for Physics-based Characters</strong></h2></a>
+        <div id="journal"> PhD Thesis, Simon Fraser University, 2023</div>
+        <div>
+            <a class="btn btn-default btn-sm btn-margin" href="https://summit.sfu.ca/_flysystem/fedora/2023-04/etd22376.pdf" download> Paper</a>
+        </div>
+      </div>
+    </div>
+    <br>
+    
+
 
     <div class="row pub-item"> 
       <div class="col-xs-2">
