--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <div class="row pub-item"> 
       <div class="col-xs-2">
         <a href="https://summit.sfu.ca/_flysystem/fedora/2023-04/etd22376.pdf">
-          <img class="img-thumbnail" src="project/pack.png">
+          <img class="img-thumbnail" src="project/thesis.png">
         </a>
       </div>
       <div class="col-xs-10">
