--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
       <h1> Zeshi Yang (楊 澤士) </h1>
       <div id="biography_text">
-        I currently work as a research scientist in MiHoYo, focusing on developing cutting edge AIGC techniques for various motion generation tasks. I am particularly enthusiastic about combining control methods with deep learning to realize <font color = #FF5733>high-quality, controllable and explainable </font> motion synthesis systems.
-        I got my PhD degree from Simon Fraser Univeristy in 2023, majoring in physics-based character animation, moition control and deep reinforcement learning. Before that, I got my bachelor's degree in applied physics from USTC in 2018.</a>
+        I am an independent researcher, focusing on developing cutting edge AIGC techniques for various motion generation tasks. I am particularly enthusiastic about combining control methods with deep learning to realize <font color = #FF5733>high-quality, controllable and explainable </font> motion synthesis systems.
+        I got my PhD degree from Simon Fraser Univeristy in 2023, majoring in physics-based character animation, motion control and deep reinforcement learning. Before that, I got my bachelor's degree in applied physics from USTC in 2018.</a>
       </div>
       <div class="row con-icon">
         <a class="col-xs-2" href="#contact"> <i class="fa fa-envelope"></i></a>
@@ -93,7 +93,7 @@
 
         <div class="edu-item">
             <i class="fa fa-windows" aria-hidden="true"></i>
-            Research scientist, MiHoYo, 2023 June - Now
+            Research scientist, MiHoYo, 2023 June - Sep
           </div>
       </div>
     </div>
