--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         <div class="edu-item">
             <i class="fa fa-windows" aria-hidden="true"></i>
-            Research scientist, MiHoYo, 2023 June - Sep
+            Research scientist, MiHoYo, 2023 June - 2024 Sep
           </div>
       </div>
     </div>
