--- a/index.html
+++ b/index.html
@@ -111,7 +111,26 @@
 
     <div class="row pub-item"> 
       <div class="col-xs-2">
-        <a href="https://arxiv.org/abs/2309.10329">
+        <a href="">
+          <img class="img-thumbnail" src="project/inbetweening.png">
+        </a>
+      </div>
+      <div class="col-xs-10">
+        <a id="title" href="https://arxiv.org/abs/2309.10329"> <h2> <strong>Real-time Diverse Motion In-betweening with Space-time Control</strong></h2></a>
+        <div id="authors"> Yuchen Chu, <strong>Zeshi Yang</strong> </div>
+        <div id="journal">  ACM SIGGRAPH Conference on Motion, Interaction and Games (MIG 2024) </div>
+        <div>
+            <a class="btn btn-default btn-sm btn-margin" href="" download> Paper</a>
+        </div>
+      </div>
+    </div>
+    <br>
+
+
+
+    <div class="row pub-item"> 
+      <div class="col-xs-2">
+        <a href="https://arxiv.org/abs/2309.1032">
           <img class="img-thumbnail" src="project/pack.png">
         </a>
       </div>
