--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       <h1> Zeshi Yang (楊 澤士) </h1>
       <div id="biography_text">
-        I am an independent researcher, focusing on developing cutting edge AIGC techniques for various motion generation tasks. I am particularly enthusiastic about combining control methods with deep learning to realize <font color = #FF5733>high-quality, controllable and explainable </font> motion synthesis systems.
+        I am an independent researcher, focusing on developing cutting edge AIGC techniques for various motion generation tasks. I am particularly enthusiastic about combining control methods (especially RL) with deep learning to realize <font color = #FF5733>high-quality, controllable and explainable </font> motion synthesis systems.
         I got my PhD degree from Simon Fraser Univeristy in 2023, majoring in physics-based character animation, motion control and deep reinforcement learning. Before that, I got my bachelor's degree in applied physics from USTC in 2018.</a>
       </div>
       <div class="row con-icon">
@@ -93,7 +93,7 @@
 
         <div class="edu-item">
             <i class="fa fa-windows" aria-hidden="true"></i>
-            Research scientist, miHoYo, 2023 June - 2024 Sep
+            Research Scientist, miHoYo, 2023 June - 2024 Sep
           </div>
       </div>
     </div>
