--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <!-- Career -->
       <div class="col-xs-6">
         <div class="edu-item">
-            <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+            <i class="fa fa-windows" aria-hidden="true"></i>
             Visiting Scholar, Peking Univerisity, China, 2021 Aug - 2022 Aug
           </div>
         
