--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </a>
       </div>
       <div class="col-xs-10">
-        <a id="title" href="https://arxiv.org/abs/2309.10329"> <h2> <strong>Real-time Diverse Motion In-betweening with Space-time Control</strong></h2></a>
+        <a id="title" href=""> <h2> <strong>Real-time Diverse Motion In-betweening with Space-time Control</strong></h2></a>
         <div id="authors"> Yuchen Chu, <strong>Zeshi Yang</strong> </div>
         <div id="journal">  ACM SIGGRAPH Conference on Motion, Interaction and Games (MIG 2024) </div>
         <div>
