--- a/index.html
+++ b/index.html
@@ -111,16 +111,16 @@
 
     <div class="row pub-item"> 
       <div class="col-xs-2">
-        <a href="">
+        <a href="https://arxiv.org/pdf/2410.00270">
           <img class="img-thumbnail" src="project/inbetweening.png">
         </a>
       </div>
       <div class="col-xs-10">
-        <a id="title" href=""> <h2> <strong>Real-time Diverse Motion In-betweening with Space-time Control</strong></h2></a>
+        <a id="title" href="https://arxiv.org/pdf/2410.00270"> <h2> <strong>Real-time Diverse Motion In-betweening with Space-time Control</strong></h2></a>
         <div id="authors"> Yuchen Chu, <strong>Zeshi Yang</strong> </div>
         <div id="journal">  ACM SIGGRAPH Conference on Motion, Interaction and Games (MIG 2024) </div>
         <div>
-            <a class="btn btn-default btn-sm btn-margin" href="" download> Paper</a>
+            <a class="btn btn-default btn-sm btn-margin" href="https://arxiv.org/pdf/2410.00270" download> Paper</a>
         </div>
       </div>
     </div>
