--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- profile text -->
     <div class="col-xs-7">
 
-      <h1> Zeshi Yang (楊 澤士) </h1>
+      <h1> Zeshi Yang (楊 澤世) </h1>
       <div id="biography_text">
         I am an independent researcher, focusing on developing cutting edge AIGC techniques for various motion generation tasks. I am particularly enthusiastic about combining control methods (especially RL) with deep learning to realize <font color = #FF5733>high-quality, controllable and explainable </font> motion synthesis systems.
         I got my PhD degree from Simon Fraser Univeristy in 2023, majoring in physics-based character animation, motion control and deep reinforcement learning. Before that, I got my bachelor's degree in applied physics from USTC in 2018.</a>
