--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
         <div id="journal">  ACM SIGGRAPH Conference on Motion, Interaction and Games (MIG 2024) </div>
         <div>
             <a class="btn btn-default btn-sm btn-margin" href="https://arxiv.org/pdf/2410.00270" download> Paper</a>
+            <a class="btn btn-default btn-sm btn-margin" href="https://www.youtube.com/watch?v=TcyjjXR_xV4"> Video</a>
         </div>
       </div>
     </div>
