--- a/index.html
+++ b/index.html
@@ -95,6 +95,12 @@
             <i class="fa fa-windows" aria-hidden="true"></i>
             Research Scientist, miHoYo, 2023 June - 2024 Sep
           </div>
+
+        <div class="edu-item">
+            <i class="fa fa-windows" aria-hidden="true"></i>
+            Research Scientist, start-up, 2024 Oct - Now
+          </div>
+        
       </div>
     </div>
 
