--- a/index.html
+++ b/index.html
@@ -114,6 +114,19 @@
     <a name="publication-pos"></a>
     <h2 class="page-header"> Publications </h2>
 
+    <div class="row pub-item"> 
+      <div class="col-xs-2">
+        <a href="https://arxiv.org/pdf/2410.00270">
+          <img class="img-thumbnail" src="project/TokenHSI.png">
+        </a>
+      </div>
+      <div class="col-xs-10">
+        <a id="title" href="https://arxiv.org/pdf/2410.00270"> <h2> <strong>okenHSI: Unified Synthesis of Physical Human-Scene Interactions through Task Tokenization</strong></h2></a>
+        <div id="authors"> Liang Pan, <strong>Zeshi Yang</strong>, Zhiyang Dou, Wenjia Wang, Buzhen Huang, Bo Dai, Taku Komura, Jingbo Wang†/div>
+        <div id="journal">  CVPR 2025 </div>
+      </div>
+    </div>
+    <br>    
 
     <div class="row pub-item"> 
       <div class="col-xs-2">
