--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         </a>
       </div>
       <div class="col-xs-10">
-        <a id="title" href="https://arxiv.org/pdf/2410.00270"> <h2> <strong>okenHSI: Unified Synthesis of Physical Human-Scene Interactions through Task Tokenization</strong></h2></a>
+        <a id="title" href="https://arxiv.org/pdf/2410.00270"> <h2> <strong>TokenHSI: Unified Synthesis of Physical Human-Scene Interactions through Task Tokenization</strong></h2></a>
         <div id="authors"> Liang Pan, <strong>Zeshi Yang</strong>, Zhiyang Dou, Wenjia Wang, Buzhen Huang, Bo Dai, Taku Komura, Jingbo Wang†/div>
         <div id="journal">  CVPR 2025 </div>
       </div>
