--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       </div>
       <div class="col-xs-10">
         <a id="title" href="https://arxiv.org/pdf/2410.00270"> <h2> <strong>TokenHSI: Unified Synthesis of Physical Human-Scene Interactions through Task Tokenization</strong></h2></a>
-        <div id="authors"> Liang Pan, <strong>Zeshi Yang</strong>, Zhiyang Dou, Wenjia Wang, Buzhen Huang, Bo Dai, Taku Komura, Jingbo Wang†/div>
+        <div id="authors"> Liang Pan, <strong>Zeshi Yang</strong>, Zhiyang Dou, Wenjia Wang, Buzhen Huang, Bo Dai, Taku Komura, Jingbo Wang† </div>
         <div id="journal">  CVPR 2025 </div>
       </div>
     </div>
