--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
 
       <h1> Zeshi Yang (楊 澤世) </h1>
       <div id="biography_text">
-        I am an independent researcher, focusing on developing cutting edge AIGC techniques for various motion generation tasks. I am particularly enthusiastic about combining control methods (especially RL) with deep learning to realize <font color = #FF5733>high-quality, controllable and explainable </font> motion synthesis systems.
-        I got my PhD degree from Simon Fraser Univeristy in 2023, majoring in physics-based character animation, motion control and deep reinforcement learning. Before that, I got my bachelor's degree in applied physics from USTC in 2018.</a>
+       I am an independent researcher focused on advancing video generation and its applications in visual reasoning and planning. My current work explores how to integrate generative video models with reinforcement learning to enable intelligent agents that can perceive, reason, and act within complex visual environments. I am also experienced in 3D motion synthesis and control, with a deep background in physics-based character animation and deep reinforcement learning.
+
+I received my Ph.D. in 2023 from Simon Fraser University, where I worked on controllable and physically realistic character animation. Prior to that, I earned a bachelor's degree in applied physics from USTC in 2018. My long-term goal is to bridge generative AI with decision-making systems to create grounded, interpretable, and task-driven agents.</a>
       </div>
       <div class="row con-icon">
         <a class="col-xs-2" href="#contact"> <i class="fa fa-envelope"></i></a>
