--- a/index.html
+++ b/index.html
@@ -99,13 +99,32 @@ I received my Ph.D. in 2023 from Simon Fraser University, where I worked on cont
 
         <div class="edu-item">
             <i class="fa fa-windows" aria-hidden="true"></i>
-            Research Scientist, start-up, 2024 Oct - Now
+            Research Scientist, Anuttacon, 2024 Oct - Now
           </div>
         
       </div>
     </div>
 
   </div>
+
+
+  <!-- Software -->
+  <div id="projects">
+    <a name="software-pos"></a>
+    <h2 class="page-header"> Softwares </h2>
+
+    <div class="row pub-item"> 
+      <div class="col-xs-2">
+        <a href="https://store.steampowered.com/app/3730100/Whispers_from_the_Star/">
+          <img class="img-thumbnail" src="tetgen_gui.png">
+        </a>
+      </div>
+      <div class="col-xs-10">
+        <a id="title" href="https://store.steampowered.com/app/3730100/Whispers_from_the_Star/"><strong>Whispers from stars</strong></a> is an interactive story driven by AI chats and digital agents.
+      </div>
+    </div>
+  </div>
+
 
 
 
