--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ I received my Ph.D. in 2023 from Simon Fraser University, where I worked on cont
     <div class="row pub-item"> 
       <div class="col-xs-2">
         <a href="https://store.steampowered.com/app/3730100/Whispers_from_the_Star/">
-          <img class="img-thumbnail" src="tetgen_gui.png">
+          <img class="img-thumbnail" src="header.jpg">
         </a>
       </div>
       <div class="col-xs-10">
