--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ I received my Ph.D. in 2023 from Simon Fraser University, where I worked on cont
 
   <!-- Software -->
   <div id="projects">
-    <a name="software-pos"></a>
+    <a name="projects-pos"></a>
     <h2 class="page-header"> Softwares </h2>
 
     <div class="row pub-item"> 
