--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ I received my Ph.D. in 2023 from Simon Fraser University, where I worked on cont
   <!-- Software -->
   <div id="projects">
     <a name="projects-pos"></a>
-    <h2 class="page-header"> Softwares </h2>
+    <h2 class="page-header"> Projects </h2>
 
     <div class="row pub-item"> 
       <div class="col-xs-2">
