--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       <h1> Zeshi Yang (楊 澤世) </h1>
       <div id="biography_text">
-       I am an independent researcher focused on advancing video generation and its applications in visual reasoning and planning. My current work explores how to integrate generative video models with reinforcement learning to enable intelligent agents that can perceive, reason, and act within complex visual environments. I am also experienced in 3D motion synthesis and control, with a deep background in physics-based character animation and deep reinforcement learning.
+       I am an independent researcher focused on advancing <strong>video generation </strong> and its applications in visual reasoning and planning. My current work explores how to integrate generative video models with reinforcement learning to enable intelligent agents that can perceive, reason, and act within complex visual environments. I am also experienced in <strong>3D motion synthesis and control</strong>, with a deep background in physics-based character animation and <strong>deep reinforcement learning</strong>.
 
 I received my Ph.D. in 2023 from Simon Fraser University, where I worked on controllable and physically realistic character animation. Prior to that, I earned a bachelor's degree in applied physics from USTC in 2018. My long-term goal is to bridge generative AI with decision-making systems to create grounded, interpretable, and task-driven agents.</a>
       </div>
