--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ I received my Ph.D. in 2023 from Simon Fraser University, where I worked on cont
         </a>
       </div>
       <div class="col-xs-10">
-        <a id="title" href="https://store.steampowered.com/app/3730100/Whispers_from_the_Star/"> Core contributor of the digital avatar system of <strong>Whispers from stars</strong></a>, an interactive story driven by AI chats and digital agents.
+        <a id="title" href="https://store.steampowered.com/app/3730100/Whispers_from_the_Star/"> Core contributor of the digital avatar system for <strong>Whispers from stars</strong></a>, an interactive story driven by AI chats and digital agents.
       </div>
     </div>
   </div>
