Revise biography section for clarity and focus

--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
 
       <h1> Zeshi Yang (楊 澤世) </h1>
       <div id="biography_text">
-       I am an independent researcher focused on advancing <strong>video generation</strong> and its applications in visual reasoning and planning. My current work explores how to integrate generative video models with reinforcement learning to enable intelligent agents that can perceive, reason, and act within complex visual environments. I am also experienced in <strong>3D motion synthesis and control</strong>, with a deep background in physics-based character animation and <strong>deep reinforcement learning</strong>.
-
-I received my Ph.D. in 2023 from Simon Fraser University, where I worked on controllable and physically realistic character animation. Prior to that, I earned a bachelor's degree in applied physics from USTC in 2018. My long-term goal is to bridge generative AI with decision-making systems to create grounded, interpretable, and task-driven agents.</a>
+      I am a researcher at Anuttacon, focusing on developing physically grounded and emotionally rich humanoid agents. My work combines video generation, motion synthesis, and control, aiming to use generative video models as world models that enable agents to perceive, reason, and interact with their environment.
+Ultimately, I seek to bridge generative AI and decision-making systems to create intelligent digital humans and general-purpose humanoid robots. I received my Ph.D. in 2023 from Simon Fraser University, where I worked on character animation and deep reinforcemet learning. Prior to that, I earned a bachelor's degree in applied physics from USTC in 2018.</a>
       </div>
       <div class="row con-icon">
         <a class="col-xs-2" href="#contact"> <i class="fa fa-envelope"></i></a>
