--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ Ultimately, I seek to bridge generative AI and decision-making systems to create
         </a>
       </div>
       <div class="col-xs-10">
-        <a id="title" href="https://store.steampowered.com/app/3730100/Whispers_from_the_Star/"> Core contributor of the digital avatar system for <strong>Whispers from stars</strong></a>, an interactive story driven by AI chats and digital agents.
+        <a id="title" href="https://store.steampowered.com/app/3730100/Whispers_from_the_Star/"> Core contributor of the audio-driven digital human system for <strong>Whispers from stars</strong></a>, an interactive story driven by AI chats and digital agents.
       </div>
     </div>
   </div>
