Update biography text in index.html
Corrected a typo and added 'motion control' to the biography.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <h1> Zeshi Yang (楊 澤世) </h1>
       <div id="biography_text">
       I am a researcher at Anuttacon, focusing on developing physically grounded and emotionally rich humanoid agents. My work combines video generation, motion synthesis, and reinforcement learning, aiming to use generative video models as world models that enable agents to perceive, reason, and interact with their environment.
-Ultimately, I seek to bridge generative AI and decision-making systems to create intelligent digital humans and general-purpose humanoid robots. I received my Ph.D. in 2023 from Simon Fraser University, where I worked on character animation and deep reinforcemet learning. Prior to that, I earned a bachelor's degree in applied physics from USTC in 2018.</a>
+Ultimately, I seek to bridge generative AI and decision-making systems to create intelligent digital humans and general-purpose humanoid robots. I received my Ph.D. in 2023 from Simon Fraser University, where I worked on character animation, motion control and deep reinforcemet learning. Prior to that, I earned a bachelor's degree in applied physics from USTC in 2018.</a>
       </div>
       <div class="row con-icon">
         <a class="col-xs-2" href="#contact"> <i class="fa fa-envelope"></i></a>
